# DeorApi

./: Cargo.toml  client.deor  hello.deor  justfile
components/: counter.deor
lib/: http.deor  leptos.deor
